# HomeWork04

./: CMakeLists.txt  Makefile  README.md  main.c  main.cpp  makefile  task_functions.asm  Отчет объема.txt  Сравнение объема.txt
headers/: animal.h  constants.h  container.h  utils.h
source/: animal.c  animal.cpp  container.c  container.cpp  utils.c  utils.cpp
tests/: README.md  input0.txt  input1  output0.txt  output1.txt  output2.txt  output3.txt  outputSort0.txt  outputSort1.txt  outputSort2.txt  outputSort3.txt
